# SkiPlan

./: .gitignore  README.md  ski-app-PRD.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  resorts.py  routes.py
backend/app/core/: config.py
backend/app/models/: domain.py
backend/app/schemas/: auth.py  preferences.py  resorts.py  routing.py
backend/app/services/: auth.py
backend/app/services/ingestion/: fixtures.py  graph_builder.py  overpass.py  service.py
backend/app/services/lift_status/: service.py
backend/app/services/resorts/: seed.py
backend/app/services/routing/: engine.py
backend/app/tests/: test_graph_builder.py  test_lift_status_service.py  test_routing_engine.py
backend/app/tests/fixtures/: synthetic_graph.py
backend/scripts/: ingest_resort.py
docs/: 3-day-house-collab-one-pager.md  3-day-house-collab-sprint.md  api-contracts.md  deep-house-logic-curriculum.md  local-setup.md  maplibre-spike.md  mvp-scope.md  session-summary.md
infra/: docker-compose.yml
mobile/: App.tsx  app.json  jest.setup.ts  package.json
mobile/src/api/: client.ts
mobile/src/components/: EmptyStateCard.tsx  FormField.tsx  PrimaryButton.tsx  RecentRoutesCard.tsx  ResortMapCard.tsx  RouteSummaryCard.tsx  ScreenCard.tsx  SectionHeader.tsx  SelectableChipGroup.tsx  SelectableMultiChipGroup.tsx
mobile/src/data/: mockData.ts
mobile/src/lib/: storage.ts
mobile/src/screens/: AuthScreen.tsx  HomeScreen.tsx  MobileAppShell.tsx  PreferencesScreen.tsx  ResortPlannerScreen.tsx
mobile/src/tests/: AuthScreen.test.tsx  (+7 more)
(+2 files in other folders)
