[project]
name = "ski-app-backend"
version = "0.1.0"
description = "Backend services for the ski slope planning app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "geojson>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
